--- a/css/styles.css
+++ b/css/styles.css
@@ -124,10 +124,8 @@ h5 {
   font-family: var(--roboto);
 }
 
-.text-arial {
+.text-helvetica {
   font-family: var(--helvetica);
-  font-size: 15px;
-  font-weight: 100;
 }
 
 .divider {
@@ -216,8 +214,26 @@ h5 {
   z-index: 2;
 }
 
+.wrapper-course-title {
+  height: 45vh;
+}
+
+#course-title {
+  width: 100%;
+  overflow: hidden;
+  min-height: 45vh;
+  position: relative;
+  background: url('../images/person-tutoring.jpg');
+  background-attachment: fixed;
+  background-size: cover;
+  background-position: center center;
+  background-repeat: no-repeat;
+  z-index: 2;
+}
+
 #intro::before,
-#categories::before {
+#categories::before,
+#course-title::before {
   position: absolute;
   top: 0;
   left: 0;
@@ -228,6 +244,10 @@ h5 {
 }
 
 #intro::before {
+  background: rgba(0, 0, 0, 0.8);
+}
+
+#course-title::before {
   background: rgba(0, 0, 0, 0.8);
 }
 
@@ -244,13 +264,11 @@ footer .list-inline-item a {
   color: var(--color-white);
 }
 
-@media screen and (min-width: 992px) {
-  .wrap-categories {
-    display: flex;
-  }
+.course-details p {
+  margin: 5px 15px;
 }
 
-@media screen and (max-width: 991px) {
+@media screen and (max-width: 768px) {
   .navbar-brand {
     margin: 0 auto;
     display: block;
@@ -263,5 +281,43 @@ footer .list-inline-item a {
 
   .wrap-categories .one-cat {
     flex: 1 1 auto;
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1024px) {
+  .navbar-brand {
+    margin: 0 auto;
+    display: block;
+  }
+
+  .wrap-categories {
+    display: flex;
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  .navbar-brand {
+    margin: 0;
+    float: left;
+  }
+
+  .wrap-categories {
+    display: flex;
+    flex: 0 0 wrap;
+  }
+
+  .wrap-course-details {
+    display: flex;
+  }
+
+  .course-details {
+    flex-grow: 1;
+    width: 70%;
+  }
+
+  .course-enroll {
+    flex-grow: 1;
+    width: 30%;
+    max-width: 350px;
   }
 }
